--- a/css/style.css
+++ b/css/style.css
@@ -8,26 +8,17 @@ padding : 0;
 }
 
 body {
-background : #090909;
+overflow-y: hidden ! important;
+overflow-x auto ! important;
 }
 
 #topBg {
 position : absolute; top : 0; left:  0;
 width : 100%;
-height : 800px;
-z-index : 1;
-background : #000 url('images/back5.png') no-repeat;
-background-position : top center;
+z-index : 0;
 }
 
-#borderBg {
-background : #090909 url('images/border-back.png') repeat-x;
-height : 0px;
-width : 100%;
-position : absolute;
-top : 560px;
-z-index : 2;
-}
+#topBg img { width : 100% }
 
 #mainContent{
 width : 860px;
@@ -44,89 +35,52 @@ float : left;
 background : url('images/logo-transp150.png') no-repeat;
 width : 200px;
 height : 140px;
-margin-left : 20px;
+margin-left : 00px;
 }
 
 #menu {
 margin-left : 400px;
 margin-top : 20px;
-width : 560px;
+width : 400px;
+height  : 80px;
 padding-top : 15px;
+background : url('images/menuBg_30p.png') no-repeat;
 }
 
-#menu ul li { float : left; display : inline; margin-right : 15px;}
+#menu ul li { float : left; display : inline; margin-right : 33px;}
 
 #menu a {
-display : block;
-font-size : 1.2em;
+display : inline;
+font-size : 1.5em;
 color : white;
-height : 25px;
-width : 98px;
-text-align : center;
-padding : 12px 8px 1px 8px;
-border  :1px solid;
-background : #fff;
 text-decoration : none;
-border-radius : 10px;
+text-transform : capitalize;
 }
 
-#menu a:hover { color : #bbb; }
+#menu a:hover { color : #da4565; }
 
-#menu a.accueil { background : #B02B2C; border-color :  #B02B2C;}
-#menu a.services { background : #6BBA70; border-color :  #6BBA70;}
-#menu a.real { background : #FF7400; border-color :  #FF7400; display:none;}
-#menu a.contact { background : #356AA0; border-color : #356AA0;}
-
-#menu a.accueil:hover { background : #B32E2F; border-color :  #B32E2F;}
-#menu a.services:hover { background : #6EBD73; border-color :  #6EBD73;}
-#menu a.real:hover { background : #FF7703; border-color :  #FF7703;}
-#menu a.contact:hover { background : #386DA3; border-color : #386DA3;}
+#menu a span {
+font-size : 0.6em;
+color : #ddd;
+display : block;
+position : relative; top : 2px; left : 3px;
+}
 
 #center {
-background : #eee;
-border : 2px solid #333;
-margin : 100px auto 0 auto;
-width : 860px;
-height : 500px;
+background-color : #555;
+margin : 15px;
+margin-top : 75px;
+border : 15px solid rgba(51, 51, 51, 0.5);
+width : 840px;
+height : 470px;
 padding : 20px;
 font-family : Verdana,Arial, sans-serif;
+background-clip: padding-box;
+border-radius: 25px;
+color : #ddd;
 }
 
 #center h1 { color : #E05F14; font-size : 25px; margin-bottom : 10px; }
-
-#footer {
-color : #555;
-height : 200px;
-width : 100%;
-margin : 35px  auto 0 auto;
-font-size : .8em;
-font-family : Verdana,Arial, sans-serif;
-background : url('images/stripe.png');
-padding-top : 15px;
-border-top : 16px solid #00154A;
-border-bottom : 0;
-}
-
-#footLeft {
-float : left;
-width : 380px;
-text-align : right;
-padding-top : 1px;
-}
-
-#footRight {
-width : 400px;
-border-left : 1px solid #555;
-margin-left : 51%;
-height : 100px;
-padding-left : 35px;
-padding-top : 1px;
-}
-
-.text {
-color : #333;
-font-family : Verdana,Arial, sans-serif;
-}
 
 .pics {  
     height:  302;  
