--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ margin-left : 400px;
 margin-top : 20px;
 width : 400px;
 height  : 80px;
-padding-top : 15px;
+padding-top : 1px;
 background : url('images/menuBg_30p.png') no-repeat;
 }
 
@@ -54,7 +54,7 @@ display : inline;
 font-size : 1.5em;
 color : white;
 text-decoration : none;
-text-transform : capitalize;
+text-shadow: black 0.1em 0.1em 0.2em;
 }
 
 #menu a:hover { color : #da4565; }
@@ -64,20 +64,21 @@ font-size : 0.6em;
 color : #ddd;
 display : block;
 position : relative; top : 2px; left : 3px;
+text-shadow: black 0.1em 0.1em 0.2em;
+width : 80px;
+text-align : center;
 }
 
 #center {
-background-color : #555;
-margin : 15px;
+background : url('images/centerBg_20p_white.png') center center;
 margin-top : 75px;
-border : 15px solid rgba(51, 51, 51, 0.5);
+border : 0px solid rgba(51, 51, 51, 0.5);
 width : 840px;
 height : 470px;
-padding : 20px;
+padding : 30px;
 font-family : Verdana,Arial, sans-serif;
-background-clip: padding-box;
 border-radius: 25px;
-color : #ddd;
+color : #444;
 }
 
 #center h1 { color : #E05F14; font-size : 25px; margin-bottom : 10px; }
